--- a/Packages.html
+++ b/Packages.html
@@ -4,7 +4,7 @@
 
 <head> 
 	<title> Hickory Web Design - Packages </title>
-	<link rel="stylesheet" href="CSS/main.css">
+	<link rel="stylesheet" href="/css/main.css">
 
 		<meta name="author" content="Jordon Meredith">
 		<meta name="keywords" content="Jordon Meredith, Jordon, Meredith, Hickory Web Design, Web Design, Office Training">
