--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head> 
 	<title> Hickory Web Design - Home </title>
-	<link rel="stylesheet" href="/css/main.css">
+	<link rel="stylesheet" href="css/main.css">
 
 
 		<meta name="author" content="Jordon Meredith">
