--- a/Contact.html
+++ b/Contact.html
@@ -27,7 +27,7 @@
      		 <i class="fa fa-caret-down"></i>
     		</button>
    			 <div class="dropdown-content">
-					<a href="Index.html"> Home</a>
+					<a href="index.html"> Home</a>
 					<a href="Packages.html"> Packages </a>
 					<a href="Services.html"> Services </a>
 					<a href="About.html"> About </a>
