--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<a href="Packages.html"> Packages </a>
 					<a href="Services.html"> Services </a>
 					<a href="About.html"> About </a>
-					<a href="contact.html"> Contact Us </a>
+					<a href="Contact.html"> Contact Us </a>
     			</div>
 	
   	</div> 
