--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <div class="navbar">
 	<a href="index.html">
-		<img src="img/FullLogo.png" alt="Hickory Web Designs Logo" id="mainLogo" />
+		<img src="img/FullLogo1.png" alt="Hickory Web Designs Logo" id="mainLogo" />
 	</a>
 	<input type="text" placeholder="Search...">
 
