--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <div class="navbar">
 	<a href="index.html">
-		<img src="img/FullLogo1.png" alt="Hickory Web Designs Logo" id="mainLogo" />
+		<img src="img/FullLogo.png" alt="Hickory Web Designs Logo" id="mainLogo" />
 	</a>
 	<input type="text" placeholder="Search...">
 
@@ -27,7 +27,7 @@
      		 <i class="fa fa-caret-down"></i>
     		</button>
    			 <div class="dropdown-content">
-					<a href="Index.html"> Home</a>
+					<a href="index.html"> Home</a>
 					<a href="Packages.html"> Packages </a>
 					<a href="Services.html"> Services </a>
 					<a href="About.html"> About </a>
