--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <div id="BetterMargins">
 	<h2> Web Design and Optimization </h2>
 	<p>
-		<img src="img/texas.png" id="texas" alt="Image of Texas State">
+		<img src="img/Texas.png" id="texas" alt="Image of Texas State">
 		Hickory Web Designs is a new company based in Del Rio, TX whose goal is to make small business easy. Using
 		Knowledge gained through university education, certifications and experience, Hickory Web Designs builds simple,
 		managable websites for small business owners looking to grow their profits while benefiting their communities. 
