--- a/Resume.html
+++ b/Resume.html
@@ -40,7 +40,7 @@
 <hr class="style-eight">
 <!--______________________________________________________________________________________________________________________________--!>
 
-	<p class="heading"> Jordon R. Meredith &#124; &#124; Del Rio, TX &#38; Laughlin AFB &#124; (562) 370-4395 &#124; &#124; Jordon.R.Meredith@Gmail.com </p>
+	<p class="heading"> Jordon R. Meredith &#124; &#124; Del Rio, TX &#38; Laughlin AFB &#124; (562) 370-4395 &#124; &#124; HickoryWebDesigns@Gmail.com </p>
 
 
 	<h1> Resume </h1>
