--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		</div>
 	</div>	
 
-
+<a href="ContactUs.html> Contact Us TEST </a>
 <div id="BetterMargins">
 	<h2> Web Design and Optimization </h2>
 	<p>
