--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<a href="Packages.html"> Packages </a>
 					<a href="Services.html"> Services </a>
 					<a href="About.html"> About </a>
-					<a href="Contact.html"> Contact Us </a>
+					<a href="ContactUs.html"> Contact Us </a>
     			</div>
 	
   	</div> 
@@ -49,7 +49,6 @@
 		</div>
 	</div>	
 
-<a href="ContactUs.html> Contact Us TEST </a>
 <div id="BetterMargins">
 	<h2> Web Design and Optimization </h2>
 	<p>
@@ -86,7 +85,7 @@
 	</div>
 
 	<div class="ChoiceBoxP">
-		<a href="Contact.html"> 
+		<a href="ContactUs.html"> 
 		<img src="img/ContactLogo.png" class="ChoicePic" alt="Contact Us"> </a>
 	</div>
 
