--- a/ContactUs.html
+++ b/ContactUs.html
@@ -4,7 +4,7 @@
 
 <head> 
 	<title> Hickory Web Design - Contact Us </title>
-	<link rel="stylesheet" href="css/index.css">
+	<link rel="stylesheet" href="css/main.css">
 
 
 		<meta name="author" content="Jordon Meredith">
@@ -27,7 +27,7 @@
      		 <i class="fa fa-caret-down"></i>
     		</button>
    			 <div class="dropdown-content">
-					<a href="Index.html"> Home</a>
+					<a href="index.html"> Home</a>
 					<a href="Packages.html"> Packages </a>
 					<a href="Services.html"> Services </a>
 					<a href="About.html"> About </a>
