--- a/About.html
+++ b/About.html
@@ -32,7 +32,7 @@
 					<a href="Packages.html"> Packages </a>
 					<a href="Services.html"> Services </a>
 					<a href="About.html"> About </a>
-					<a href="Contact.html"> Contact Us </a>
+					<a href="ContactUs.html"> Contact Us </a>
     			</div>
 	
   	</div> 
