--- a/ContactUs.html
+++ b/ContactUs.html
@@ -12,9 +12,72 @@
 		<meta name="description" content="Hickory Web Design Contact Us Page">
 		<meta charset="UTF-8">
 
+
+<!--________________________________________________________________________________________________________--!>
+<!--________________________________________________________________________________________________________--!>
+
+
+<script type="text/javascript">
+	var ifr = document.getElementById("JotFormIFrame-73591032284152");
+	if(window.location.href && window.location.href.indexOf("?") > -1) {
+
+		var get = window.location.href.substr(window.location.href.indexOf("?") + 1);
+		if(ifr && get.length > 0) {
+		var src = ifr.src;
+			src = src.indexOf("?") > -1 ? src + "&" + get : src  + "?" + get;
+			ifr.src = src;
+		}
+	}
+
+
+
+      window.handleIFrameMessage = function(e) {
+		var args = e.data.split(":");
+		if (args.length > 2) { iframe = document.getElementById("JotFormIFrame-" + args[2]); } else { iframe = document.getElementById("JotFormIFrame"); }
+		if (!iframe)
+			return;
+		switch (args[0]) {
+			case "scrollIntoView":
+				iframe.scrollIntoView();
+					break;
+			case "setHeight":
+				iframe.style.height = args[1] + "px";
+					break;
+			case "collapseErrorPage":
+				if (iframe.clientHeight > window.innerHeight) {
+					iframe.style.height = window.innerHeight + "px";
+				}
+					break;
+			case "reloadPage":
+				window.location.reload();
+					break;
+		}
+
+
+	var isJotForm = (e.origin.indexOf("jotform") > -1) ? true : false;
+		if(isJotForm && "contentWindow" in iframe && "postMessage" in iframe.contentWindow) {
+			var urls = {"docurl":encodeURIComponent(document.URL),"referrer":encodeURIComponent(document.referrer)};
+				iframe.contentWindow.postMessage(JSON.stringify({"type":"urls","value":urls}), "*");
+			}
+		};
+
+
+	if (window.addEventListener) {
+		window.addEventListener("message", handleIFrameMessage, false);
+	} else if (window.attachEvent) {
+		window.attachEvent("onmessage", handleIFrameMessage);
+	}
+
+
+</script>
+
+
 </head>
 
+<!--___________________________________________________________________________________________________________--!>
+
 <Body>
+
 
 <div class="navbar">
 	<a href="index.html">
@@ -31,7 +94,7 @@
 					<a href="Packages.html"> Packages </a>
 					<a href="Services.html"> Services </a>
 					<a href="About.html"> About </a>
-					<a href="ContactUs.html"> Contact Us </a>
+					<a href="Contact.html"> Contact Us </a>
     			</div>
 	
   	</div> 
@@ -52,49 +115,7 @@
       border:none;"
       scrolling="no">
     </iframe>
-    <script type="text/javascript">
-      var ifr = document.getElementById("JotFormIFrame-73591032284152");
-      if(window.location.href && window.location.href.indexOf("?") > -1) {
-        var get = window.location.href.substr(window.location.href.indexOf("?") + 1);
-        if(ifr && get.length > 0) {
-          var src = ifr.src;
-          src = src.indexOf("?") > -1 ? src + "&" + get : src  + "?" + get;
-          ifr.src = src;
-        }
-      }
-      window.handleIFrameMessage = function(e) {
-        var args = e.data.split(":");
-        if (args.length > 2) { iframe = document.getElementById("JotFormIFrame-" + args[2]); } else { iframe = document.getElementById("JotFormIFrame"); }
-        if (!iframe)
-          return;
-        switch (args[0]) {
-          case "scrollIntoView":
-            iframe.scrollIntoView();
-            break;
-          case "setHeight":
-            iframe.style.height = args[1] + "px";
-            break;
-          case "collapseErrorPage":
-            if (iframe.clientHeight > window.innerHeight) {
-              iframe.style.height = window.innerHeight + "px";
-            }
-            break;
-          case "reloadPage":
-            window.location.reload();
-            break;
-        }
-        var isJotForm = (e.origin.indexOf("jotform") > -1) ? true : false;
-        if(isJotForm && "contentWindow" in iframe && "postMessage" in iframe.contentWindow) {
-          var urls = {"docurl":encodeURIComponent(document.URL),"referrer":encodeURIComponent(document.referrer)};
-          iframe.contentWindow.postMessage(JSON.stringify({"type":"urls","value":urls}), "*");
-        }
-      };
-      if (window.addEventListener) {
-        window.addEventListener("message", handleIFrameMessage, false);
-      } else if (window.attachEvent) {
-        window.attachEvent("onmessage", handleIFrameMessage);
-      }
-      </script>
+   
       
       </body>
       </html>
