--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <!--______________________________________________________________________________________________________________________________--!>
 
 	<div class="HeadingBox">
- 		Hickory Web Design
+ 		Hickory Web Designs
 		<div class="Infinity">
 			&#8766; &#8766; &#8766;
 		</div>
@@ -67,7 +67,7 @@
 
 	<h2> Office Professionals </h2>
 	<p>
-		Despite the name, Hickory Web Design does not just specialize in web development. We can also help train you or your
+		Despite the name, Hickory Web Designs does not just specialize in web development. We can also help train you or your
 		staff on Microsoft Office productivity and presentation software, such as Word or Excel.
 	</p>
 </div>
