--- a/Packages.html
+++ b/Packages.html
@@ -3,12 +3,12 @@
 
 
 <head> 
-	<title> Hickory Web Design - Packages </title>
+	<title> Hickory Web Designs - Packages </title>
 	<link rel="stylesheet" href="css/main.css">
 
 		<meta name="author" content="Jordon Meredith">
 		<meta name="keywords" content="Jordon Meredith, Jordon, Meredith, Hickory Web Design, Web Design, Office Training">
-		<meta name="description" content="Hickory Web Design offered packages and specials">
+		<meta name="description" content="Hickory Web Designs offered packages and specials">
 		<meta charset="UTF-8">
 
 </head>
@@ -226,7 +226,7 @@
 	<p class="small">
 		*Must have an account with a web analytics and/or web advertisement company. Although many tracking companies are free, any 
 		expenses to sign up for, use or maintain an analytics or advertising account is the responsibity of the company and not Hickory
-		Web Design.
+		Web Designs.
 		
 		<br/>
 		
