--- a/About.html
+++ b/About.html
@@ -3,12 +3,12 @@
 
 
 <head> 
-	<title> Hickory Web Design - About </title>
+	<title> Hickory Web Designs - About </title>
 	<link rel="stylesheet" href="css/main.css">
 
 		<meta name="author" content="Jordon Meredith">
-		<meta name="keywords" content="Jordon Meredith, Jordon, Meredith, Hickory Web Design, Web Design, Office Training">
-		<meta name="description" content="Hickory Web Design About Page">
+		<meta name="keywords" content="Jordon Meredith, Jordon, Meredith, Hickory Web Designs, Web Design, Office Training">
+		<meta name="description" content="Hickory Web Designs About Page">
 		<meta charset="UTF-8">
 
 </head>
@@ -52,11 +52,11 @@
 
 <div id="BetterMargins">
 
-	<h2> Hickory Web Design </h2>
+	<h2> Hickory Web Designs </h2>
 	
 
 	<p>
-		Hickory Web Design is a company founded on the idea that local businesses should not have to spend countless hours
+		Hickory Web Designs is a company founded on the idea that local businesses should not have to spend countless hours
 		learning how to build websites, nor should they have to spend $3000 on a basic, functional website to help improve
 		business. 
 		
@@ -64,7 +64,7 @@
 
 		Many web designers charge thousands of dollars to create beautiful websites that take months to make. These websites
 		tend to be overly-<q>flashy</q>, which is great for large organizations, but can take away from the simplicity and warmth
-		of a small, local business.  Hickory Web Design focuses on the heart of the business and can bring a functional website to 
+		of a small, local business.  Hickory Web Designs focuses on the heart of the business and can bring a functional website to 
 		life in days. So, if you are looking for an affordable website that makes your customers feel at home, you have come to the
 		right place!
 	</p>
