--- a/Resume.html
+++ b/Resume.html
@@ -7,8 +7,8 @@
 	<link rel="stylesheet" href="css/main.css">
 
 		<meta name="author" content="Jordon Meredith">
-		<meta name="keywords" content="Jordon Meredith, Jordon, Meredith, Hickory Web Design, Web Design, Office Training">
-		<meta name="description" content="Jordon Meredith's Resume, Hickory Web Design">
+		<meta name="keywords" content="Jordon Meredith, Jordon, Meredith, Hickory Web Designs, Web Design, Office Training">
+		<meta name="description" content="Jordon Meredith's Resume, Hickory Web Designs">
 		<meta charset="UTF-8">
 
 </head>
