--- a/Services.html
+++ b/Services.html
@@ -3,12 +3,12 @@
 
 
 <head> 
-	<title> Hickory Web Design - Services </title>
+	<title> Hickory Web Designs - Services </title>
 	<link rel="stylesheet" href="css/main.css">
 
 		<meta name="author" content="Jordon Meredith">
-		<meta name="keywords" content="Jordon Meredith, Jordon, Meredith, Hickory Web Design, Web Design, Office Training">
-		<meta name="description" content="Hickory Web Design Individual Services">
+		<meta name="keywords" content="Jordon Meredith, Jordon, Meredith, Hickory Web Designs, Web Design, Office Training">
+		<meta name="description" content="Hickory Web Designs Individual Services">
 		<meta charset="UTF-8">
 
 </head>
@@ -66,7 +66,7 @@
 	<div class="aLaCarte">
 		<p class="important"> Web Analytics </p>
 		Add Web Analytics to a pre-existing site and have a 1 hour training seminar for up to 5 people.
-		Although Hickory Web Design typically recommends the FREE Google Analytics program, other 
+		Although Hickory Web Designs typically recommends the FREE Google Analytics program, other 
 		web analytics programs qualify as well.
 		<br/> <br/>
 		Cost: $39.99
