--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 
 <head> 
-	<title> Hickory Web Design - Home </title>
+	<title> Hickory Web Designs - Home </title>
 	<link rel="stylesheet" href="css/main.css">
 
 
 		<meta name="author" content="Jordon Meredith">
-		<meta name="keywords" content="Jordon Meredith, Jordon, Meredith, Hickory Web Design, Web Design, Office Training">
-		<meta name="description" content="Hickory Web Design Home Page">
+		<meta name="keywords" content="Jordon Meredith, Jordon, Meredith, Hickory Web Designs, Web Design, Office Training">
+		<meta name="description" content="Hickory Web Designs Home Page">
 		<meta charset="UTF-8">
 
 </head>
