--- a/Services.html
+++ b/Services.html
@@ -56,11 +56,11 @@
 
 	<div class="aLaCarte">
 		<p class="important"> Basic Web Build </p>
-		Have a custom HTML or host provided website built based on content provided directly from you. Simply provide desired color scheme, simple layout design, and pre-written content. The rest is done for you! Basic Web Build covers up to 5 web pages with basic functionality. 
+		Have a custom HTML or host provided website built based on content provided directly from you. Simply provide desired 	color scheme, simple layout design, and pre-written content. The rest is done for you! Basic Web Build covers up to 5 web pages with basic functionality. Includes HTML5, CSS and JavaScript.
 			<br/>
-		Note: website hosting is not included. Typically, hosting will cost between $2 to $20 per month. Contact Hickory Web Designs for more information. 
+		Note: Domain name and hosting not included.
 			<br/> <br/>
-		Cost: $99.99 &nbsp;  &nbsp; Additional pages: $9.99
+		Cost: $199.99 &nbsp;  &nbsp; Additional pages: $9.99
 	</div>
 
 	<div class="aLaCarte">
@@ -69,7 +69,7 @@
 		Although Hickory Web Designs typically recommends the FREE Google Analytics program, other 
 		web analytics programs qualify as well.
 		<br/> <br/>
-		Cost: $39.99
+		Cost: $59.99
 	</div>
 
 	<div class="aLaCarte">
@@ -80,7 +80,7 @@
 		<br/>
 		Note: service covers TWO installations
 		<br/> <br/>
-		Cost: $39.99
+		Cost: $59.99
 	</div>
 
 	<h2> Mobile Application Services </h2>
@@ -100,7 +100,7 @@
 		Have re-usable templates created to make organizing data simple. This service does not
 		include use of VBA, but, instead, uses Excel's extensive repertoire of formula's and functions.
 		<br/> <br/>
-		Cost (first 3 sheets): $39.99 &nbsp; &nbsp; additional sheets: $7.99/sheet
+		Cost (first 3 sheets): $49.99 &nbsp; &nbsp; additional sheets: $9.99/sheet
 	</div>
 
 	<div class="aLaCarte">
