--- a/Packages.html
+++ b/Packages.html
@@ -132,7 +132,12 @@
 					<ul>
 						<li> Up to 10 pages </li>
 						<li> Custom web pages </li>
-						<li> Basic website functionality </li>
+						<li> Basic website functionality
+							<ul>
+								<li> HTML </li>
+								<li> CSS </li>
+								<li> JavaScript </li>
+							</ul>
 					</ul>
 				<li> Integration of Web Analytics* </li>
 				<li> Integration of Web Advertisement* </li>
@@ -142,7 +147,7 @@
 		
 		<div class="BoxRight2">
 			
-			$299.99	
+			$499.99	
 		
 		</div>
 		</div>
@@ -168,7 +173,7 @@
 		
 		<div class="BoxRight2">
 			
-				$199.99
+				$399.99
 		
 		</div>
 		</div>
