--- a/ContactUs.html
+++ b/ContactUs.html
@@ -93,7 +93,8 @@
 					<a href="Packages.html"> Packages </a>
 					<a href="Services.html"> Services </a>
 					<a href="About.html"> About </a>
-					<a href="Contact.html"> Contact Us </a>
+					<a href="Contact.html"> Contact Us </a>	
+					<a href="SvcInfo.html"> Q&A </a>
     			</div>
 	
   	</div> 
