--- a/Resume.html
+++ b/Resume.html
@@ -31,6 +31,7 @@
 					<a href="Services.html"> Services </a>
 					<a href="About.html"> About </a>
 					<a href="ContactUs.html"> Contact Us </a>
+				 	<a href="SvcInfo.html"> Q&A </a>
     			</div>
 	
   	</div> 
