--- a/SvcInfo.html
+++ b/SvcInfo.html
@@ -4,7 +4,7 @@
 
 <head> 
 	<title> Hickory Web Designs - Q&A</title>
-	<link rel="stylesheet" href="CSS/index.css">
+	<link rel="stylesheet" href="CSS/main.css">
 
 		<meta name="author" content="Jordon Meredith">
 		<meta name="keywords" content="Jordon Meredith, Jordon, Meredith, Hickory Web Designs, Web Design, Office Training">
