--- a/SvcInfo.html
+++ b/SvcInfo.html
@@ -4,7 +4,7 @@
 
 <head> 
 	<title> Hickory Web Designs - Q&A</title>
-	<link rel="stylesheet" href="CSS/main.css">
+	<link rel="stylesheet" href="css/main.css">
 
 		<meta name="author" content="Jordon Meredith">
 		<meta name="keywords" content="Jordon Meredith, Jordon, Meredith, Hickory Web Designs, Web Design, Office Training">
@@ -118,6 +118,6 @@ Services Explained
 		Finally, we may offer services that are not listed on the site. Please feel free to ask about services not listed
 		if you need them. We will do everything we can to provide you with a full solution!
 		</p>
-
+	</div>
 </body>
 </html>
