--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta name="keywords" content="Jordon Meredith, Jordon, Meredith, Hickory Web Designs, Web Design, Office Training">
 		<meta name="description" content="Hickory Web Designs Home Page">
 		<meta charset="UTF-8">
+		<meta name="viewpoint" content="width=device-width, initial-scale=1">
 
 </head>
 
