--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 
 
 <head> 
-	<title> Hickory Web Designs - Home </title>
+	<title> Hickory Web Design - Home </title>
 	<link rel="stylesheet" href="css/main.css">
 
 
 		<meta name="author" content="Jordon Meredith">
-		<meta name="keywords" content="Jordon Meredith, Jordon, Meredith, Hickory Web Designs, Web Design, Office Training">
-		<meta name="description" content="Hickory Web Designs Home Page">
+		<meta name="keywords" content="Jordon Meredith, Jordon, Meredith, Hickory Web Designs, Web Designs, Office Training, Del Rio, Texas, Southern Texas, Laughlin AFB">
+		<meta name="description" content="Hickory Web Design Home Page">
 		<meta charset="UTF-8">
-		<meta name="viewpoint" content="width=device-width, initial-scale=1">
-
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+<!--____________________________________________________________Navigation______________________________________________________________--!>
 
 <Body>
 
@@ -33,8 +33,7 @@
 					<a href="Services.html"> Services </a>
 					<a href="About.html"> About </a>
 					<a href="ContactUs.html"> Contact Us </a>
-				 	<a href="SvcInfo.html"> Q&A </a>
-    			</div>
+       			</div>
 	
   	</div> 
 
@@ -42,56 +41,91 @@
 
 <hr class="style-eight">
 
-<!--______________________________________________________________________________________________________________________________--!>
-
-	<div class="HeadingBox">
- 		Hickory Web Designs
-		<div class="Infinity">
-			&#8766; &#8766; &#8766;
-		</div>
-	</div>	
-
-<div id="BetterMargins">
-	<h2> Web Design and Optimization </h2>
-	<p>
-		<img src="img/Texas.png" id="texas" alt="Image of Texas State">
-		Hickory Web Designs is a new company based in Del Rio, TX whose goal is to make small business easy. Using
-		Knowledge gained through university education, certifications and experience, Hickory Web Designs builds simple,
-		managable websites for small business owners looking to grow their profits while benefiting their communities. 
-	<br/> <br/>
-		All websites are built using modern website design programming that is compatible on all web browsers, such as Google Chrome,
-		Safari, Internet Explorer, Edge, and Firefox, as well as all platforms, including computer and mobile devices. This means that 
-		ALL your customers will be able to view and access your website flawlessly.
-	<br/><br/>
-		Additionally, Hickory Web Designs also provides services such as analytics tool integration and advertisement additions. This
-		means that, in addition to having a new website built, we can help optimize your site as well! 
+<!--________________________________________________________BODY________________________________________________________________--!>
 	
+	<div class="col-3"> &nbsp; </div>
+	<div class="col-6 Heading">
 
-	<h2> Office Professionals </h2>
-	<p>
-		Despite the name, Hickory Web Designs does not just specialize in web development. We can also help train you or your
-		staff on Microsoft Office productivity and presentation software, such as Word or Excel.
-	</p>
-</div>
+ 			<h1> Hickory Web Designs </h1> 
 
-<div class="ChoiceBoxContainer">
-	<h1> Packages and Services </h1>
-	<div class="ChoiceBoxP">
-		<a href="Packages.html">
-		<img src="img/PackagesLogo.png" class="ChoicePic" alt="View Packages"> </a>
+		
+	</div>
+	
+	<div class="col-12"> &nbsp; </div>
+	<div class="col-2"> &nbsp; </div>
+	<div class="col-8 Body">
+
+			<h2> Web Design and Optimization </h2>
+			<p>
+
+				<img src="img/texas.png" id="texas" alt="Image of Texas State">
+			Hickory Web Designs is a new company based in Del Rio, TX whose goal is to make small business easy. Using
+			Knowledge gained through university education, certifications and experience, Hickory Web Designs builds simple,
+			managable websites for small business owners looking to grow their profits while benefiting their communities. 
+
+				<br/> <br/>
+
+			All websites are built using modern website design programming that is compatible on all web browsers, such as Google Chrome,
+			Safari, Internet Explorer, Edge, and Firefox, as well as all platforms, including computer and mobile devices. This means that 
+			ALL your customers will be able to view and access your website flawlessly.
+
+				<br/><br/>
+
+			Additionally, Hickory Web Designs also provides services such as analytics tool integration and advertisement additions. This
+			means that, in addition to having a new website built, we can help optimize your site as well! 
+
+			</p>
+
+			<h2> Office Professionals </h2>
+
+			<p>
+
+			Despite the name, Hickory Web Designs does not just specialize in web development. We can also help train you or your
+			staff on Microsoft Office productivity and presentation software, such as Word or Excel.
+
+			</p>
+
 	</div>
 
-	<div class="ChoiceBoxP">
-		<a href="Services.html">
-		<img src="img/ServicesLogo.png" class="ChoicePic" alt="View Services"> </a>
+	<div class="col-12"> &nbsp; </div>
+	<div class="col-2"> &nbsp; </div>
+	<div class="col-8 Body">
+
+		<h1> Packages and Services </h1>
+
+			<hr class="style-one">
+
+
+		<div class="col-0"> &nbsp; </div>
+		<div class="col-3 Blu">
+
+			<a href="Packages.html">
+			<img src="img/PackagesLogo.png" class="ChoicePic" alt="View Packages"> </a>
+
+		</div>
+	
+		<div class="col-1"> &nbsp; </div>
+
+		<div class="col-3 Blu">
+
+			<a href="Services.html">
+			<img src="img/ServicesLogo.png" class="ChoicePic" alt="View Services"> </a>
+
+		</div>
+	
+		<div class="col-1"> &nbsp; </div>
+		
+		<div class="col-3 Blu">
+
+			<a href="Contact.html"> 
+			<img src="img/ContactLogo.png" class="ChoicePic" alt="Contact Us"> </a>
+
+		</div>
+
+		<div class="col-0"> &nbsp; </div>
 	</div>
 
-	<div class="ChoiceBoxP">
-		<a href="ContactUs.html"> 
-		<img src="img/ContactLogo.png" class="ChoicePic" alt="Contact Us"> </a>
-	</div>
 
-</div>
-	<br/><br/> 	<br/><br/>
+
 </body>
 </html>
