--- a/Packages.html
+++ b/Packages.html
@@ -7,11 +7,12 @@
 	<link rel="stylesheet" href="css/main.css">
 
 		<meta name="author" content="Jordon Meredith">
-		<meta name="keywords" content="Jordon Meredith, Jordon, Meredith, Hickory Web Design, Web Design, Office Training">
+		<meta name="keywords" content="Jordon Meredith, Jordon, Meredith, Hickory Web Designs, Web Designs, Office Training">
 		<meta name="description" content="Hickory Web Designs offered packages and specials">
 		<meta charset="UTF-8">
-
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+<!--____________________________________________________________Navigation______________________________________________________________--!>
 
 <Body>
 
@@ -31,7 +32,6 @@
 					<a href="Services.html"> Services </a>
 					<a href="About.html"> About </a>
 					<a href="ContactUs.html"> Contact Us </a>
-				 	<a href="SvcInfo.html"> Q&A </a>
     			</div>
 	
   	</div> 
@@ -50,21 +50,26 @@
 			<a href="#Opt">  Web Optimization Package </a>
 			<a href="#Train"> Training Package </a>
 		</div>
-<!--____________________________________________________START CODE_____________________________________________________________--!>
-
-<div class="HeadingBox">
- Services Packages
-	<div class="Infinity">
-	&#8766; &#8766; &#8766;
+<!--____________________________________________________BODY_____________________________________________________________--!>
+	
+	<div class="col-3"> &nbsp; </div>
+	<div class="col-6 Heading">
+ 				<h1> Services Packages </h1>
 	</div>
-</div>	
 
 
 
 
-<h2 id="Plat"> Web Development Package Platinum </h2>
-<h4> (Currently Unavailable) </h4>
-		<div class="BoxLeft">
+
+	<div class="col-0"> &nbsp; </div>
+
+	<div class="col-12"> &nbsp;
+		<h2 id="Plat"> Web Development Package Platinum </h2>
+		<h4> (Currently Unavailable) </h4>
+	</div>
+		
+	<div class="col-1"> &nbsp; </div>
+	<div class="col-7 Pack">
 		
 			The premium package is an all inclusive deal designed to get you the best price on all your needs.
 			Websites are hand-coded, so you are not limited to generic layouts and designs. This package also
@@ -84,21 +89,25 @@
 				<li> 1 Year Application Maintenance </li>	
 				<li> 1 Year Web Hosting </li>
 			</ul>
-		<div class="BoxRight1">
 	
-			No Pricing Available 
+	</div>
 
-		</div>
-		</div>
+
+	<div class="col-1"> &nbsp; </div>
+	<div class="col-12"> &nbsp; </div>
 <!--_____________________________________________________________________________________________________________________--!>
-<h2 id="Gold"> Web Development Package Gold </h2>
-<h4> (Currently Unavailable) </h4>	
-	
-		<div class="BoxLeft">
+
+
+	<div class="col-12">
+		<h2 id="Gold"> Web Development Package Gold </h2>
+		<h4> (Currently Unavailable) </h4>
+	</div>	
+	<div class="col-1"> &nbsp; </div>
+	<div class="col-7 Pack">
 		
-			The premium package is an all inclusive deal designed to get you the best price on all your needs.
-			All websites are written in HTML5, CSS and JavaScript (although you do not need to know what any 
-			of that means) and are tested to be supported in all browsers.
+			The Gold Package is for those who need to distribute information efficiently over the web, but do not 
+			necessarily need to make online sales. This package is perfect for contractors, real-estate professionals,
+			freelancers and more. 
 			This package includes:
 			<ul>
 				<li> Web Design
@@ -114,17 +123,18 @@
 				<li> 1 Year Web Page Maintenance </li>
 				<li> 1 Year Application Maintenance </li>	
 			</ul>
-		<div class="BoxRight1">
-	
-			No Pricing Available 
+		
+		</div>
 
-		</div>
-		</div>
+	<div class="col-1"> &nbsp; </div>
+	<div class="col-12"> &nbsp; </div>
 <!--_____________________________________________________________________________________________________________________--!>
+	<div class="col-12">
+ 		<h2 id="Silver"> Web Development Package Silver </h2> 
+	</div>	
 
- <h2 id="Silver"> Web Development Package Silver </h2> 
-
-		<div class ="BoxLeft">
+	<div class="col-1"> &nbsp; </div>
+	<div class="col-7 Pack">
 
 			This package is great for those who are looking to build a large, new, and custom website, but dont
 			need both analytics or advertisment. This package includes: 
@@ -133,12 +143,7 @@
 					<ul>
 						<li> Up to 10 pages </li>
 						<li> Custom web pages </li>
-						<li> Basic website functionality
-							<ul>
-								<li> HTML </li>
-								<li> CSS </li>
-								<li> JavaScript </li>
-							</ul>
+						<li> Basic website functionality </li>
 					</ul>
 				<li> Integration of Web Analytics* </li>
 				<li> Integration of Web Advertisement* </li>
@@ -146,18 +151,21 @@
 				<li> 1 Year Web Hosting </li>	
 			</ul>
 		
-		<div class="BoxRight2">
 			
-			$499.99	
+			$299.99	
 		
 		</div>
-		</div>
 
+	<div class="col-1"> &nbsp; </div>
+	<div class="col-12"> &nbsp; </div>
 <!--_____________________________________________________________________________________________________________________--!>
+	<div class="col-12">
+		<h2 id="Bronze"> Web Development Package Bronze</h2> 
+	</div>	
 
-<h2 id="Bronze"> Web Development Package Bronze</h2> 
-
-		<div class ="BoxLeft">
+	<div class="col-1"> &nbsp; </div>
+	<div class="col-7 Pack">
+	
 
 			Clients that need a simple, basic website will benefit the most from this package.
 			Choose either web analytics or web advertisement: whichever works best for you! Includes:	
@@ -171,20 +179,24 @@
 				<li> Integration of Web Analytics* OR Web Advertisement* </li>
 				<li> 1 Year Web Page Maintenance </li>
 			</ul>
-		
-		<div class="BoxRight2">
+	
 			
-				$399.99
+				$199.99
+		
 		
 		</div>
-		</div>
 
+	<div class="col-1"> &nbsp; </div>
+	<div class="col-12"> &nbsp; </div>
 <!--_____________________________________________________________________________________________________________________--!>
+	
+	<div class="col-12">
+		<h2 id="Opt"> Web Optimization Package </h2>
 
+	</div>	
 
-<h2 id="Opt"> Web Optimization Package </h2>
-
-		<div class="BoxLeft">
+	<div class="col-1"> &nbsp; </div>
+	<div class="col-7 Pack">	
 		
 			This package works best for pre-existing websites, both custom built and built using hosting
 			websites. This package includes:
@@ -194,18 +206,26 @@
 				<li> 1 Hour Training on usage and maintenance </li>
 			</ul>	
 
-		<div class="BoxRight3">
+	
 	
 			$99.99
 
+		
 		</div>
-		</div>
-<!--_____________________________________________________________________________________________________________________--!>
 
-<h2 id="Train"> Training Package </h2>
+
+	<div class="col-1"> &nbsp; </div>
+	<div class="col-12"> &nbsp; </div>
+<!--_____________________________________________________________________________________________________________________--!>
 	
+	<div class="col-12">
+		<h2 id="Train"> Training Package </h2>
 	
-		<div class="BoxLeft">
+	</div>	
+
+	<div class="col-1"> &nbsp; </div>
+	<div class="col-7 Pack">
+		
 		
 			This training package is designed to give your office an edge. Pick two or more trainings below and save!
 			Up to two training seminars can be held on the same day. Training seminars have restrictions for number of 
@@ -220,15 +240,18 @@
 				<li> Web Advertisement Training </li>
 			</ul>
 	
-		<div class="BoxRight2">
+		
 	
 			$79.99 <p class="notation"> Additional Class: $19.99 </p>
 
 		</div>
-		</div>
+
+	<div class="col-1"> &nbsp; </div>
+	<div class="col-12"> &nbsp; </div>
 <!--_____________________________________________________________________________________________________________________--!>
 	<br/> <br/>
-	
+
+	<div class="col-12">	
 	<p class="small">
 		*Must have an account with a web analytics and/or web advertisement company. Although many tracking companies are free, any 
 		expenses to sign up for, use or maintain an analytics or advertising account is the responsibity of the company and not Hickory
@@ -236,8 +259,9 @@
 		
 		<br/>
 		
-		**Monthly payments available	
-	</p>	
+		**Monthly payments available	</p>
+	</div>
+		
 	<br/> <br/>
 	</body>
 	</html>
