--- a/About.html
+++ b/About.html
@@ -3,17 +3,16 @@
 
 
 <head> 
-	<title> Hickory Web Designs - About </title>
+	<title> Hickory Web Design - About </title>
 	<link rel="stylesheet" href="css/main.css">
 
 		<meta name="author" content="Jordon Meredith">
-		<meta name="keywords" content="Jordon Meredith, Jordon, Meredith, Hickory Web Designs, Web Design, Office Training">
+		<meta name="keywords" content="Jordon Meredith, Jordon, Meredith, Hickory Web Designs, Web Designs, Office Training">
 		<meta name="description" content="Hickory Web Designs About Page">
 		<meta charset="UTF-8">
-
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-
-<!--______________________________________________________________________________________________________________________________--!>
+<!--____________________________________________________________Navigation______________________________________________________________--!>
 
 <Body>
 
@@ -33,7 +32,6 @@
 					<a href="Services.html"> Services </a>
 					<a href="About.html"> About </a>
 					<a href="ContactUs.html"> Contact Us </a>
-					<a href="SvcInfo.html"> Q&A </a>
     			</div>
 	
   	</div> 
@@ -42,22 +40,25 @@
 
 <hr class="style-eight">
 
-<!--______________________________________________________________________________________________________________________________--!>
-<div class="HeadingBox">
-	About
-	<div class="Infinity">
-	&#8766; &#8766; &#8766;
+<!--_____________________________________________________________BODY______________________________________________________________--!>
+
+	<div class="col-3"> &nbsp; </div>
+	<div class="col-6 Heading">
+
+ 			<h1> About </h1> 
+		
 	</div>
-</div>	
-
-
-<div id="BetterMargins">
-
-	<h2> Hickory Web Designs </h2>
 	
+	<div class="col-12"> &nbsp; </div>
+	
+	<div class="col-2"> &nbsp; </div>
+	
+	<div class="col-8 Body">
 
-	<p>
-		Hickory Web Designs is a company founded on the idea that local businesses should not have to spend countless hours
+		<h2> Hickory Web Designs </h2>
+
+		<p>
+		Hickory Web Desigsn is a company founded on the idea that local businesses should not have to spend countless hours
 		learning how to build websites, nor should they have to spend $3000 on a basic, functional website to help improve
 		business. 
 		
@@ -108,17 +109,3 @@
 
 	</body>
 	</html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-		
