--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 	<a href="index.html">
 		<img src="img/FullLogo.png" alt="Hickory Web Designs Logo" id="mainLogo" />
 	</a>
-	<input type="text" placeholder="Search...">
 
   	<div class="dropdown">
     		<button class="dropbtn">&#9776; Menu
@@ -43,8 +42,8 @@
 
 <!--________________________________________________________BODY________________________________________________________________--!>
 	
-	<div class="col-3"> &nbsp; </div>
-	<div class="col-6 Heading">
+	<div class="col-3 col-m-1"> &nbsp; </div>
+	<div class="col-6 col-m-3 Heading">
 
  			<h1> Hickory Web Designs </h1> 
 
@@ -131,3 +130,18 @@
 </html>
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	
