--- a/About.html
+++ b/About.html
@@ -10,50 +10,51 @@
 		<meta name="keywords" content="Jordon Meredith, Jordon, Meredith, Hickory Web Designs, Web Designs, Office Training">
 		<meta name="description" content="Hickory Web Designs About Page">
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
 </head>
 <!--____________________________________________________________Navigation______________________________________________________________--!>
 
 <Body>
 
 <div class="navbar">
-	<a href="index.html">
-		<img src="img/FullLogo.png" alt="Hickory Web Designs Logo" id="mainLogo" />
-	</a>
-	<input type="text" placeholder="Search...">
+
+	<div class='section logo'>
+
+			<a href="index.html"> <img src="img/FullLogo.png" alt="Hickory Web Designs Logo" class="mainLogo" /> </a>
+
+	</div>
+
+
 
   	<div class="dropdown">
-    		<button class="dropbtn">&#9776; Menu
-     		 <i class="fa fa-caret-down"></i>
-    		</button>
+		<div class='section navMenu'>
+    		<button class="dropbtn"> &#9776; Menu </button>
+		</div>
    			 <div class="dropdown-content">
 					<a href="index.html"> Home</a>
 					<a href="Packages.html"> Packages </a>
 					<a href="Services.html"> Services </a>
 					<a href="About.html"> About </a>
-					<a href="ContactUs.html"> Contact Us </a>
+					<a href="Contact.html"> Contact Us </a>
+					<a href="SvcInfo.html"> Q&A </a>
     			</div>
 	
   	</div> 
 
 </div>
 
-<hr class="style-eight">
-
 <!--_____________________________________________________________BODY______________________________________________________________--!>
+<div class='page'>	
 
-	<div class="col-3"> &nbsp; </div>
-	<div class="col-6 Heading">
+	
+	<div class='section header'>
 
- 			<h1> About </h1> 
+
+ 		<h1> About </h1>
+	
+	</div> 
 		
-	</div>
-	
-	<div class="col-12"> &nbsp; </div>
-	
-	<div class="col-2"> &nbsp; </div>
-	
-	<div class="col-8 Body">
+	<div class='section content'>
 
 		<h2> Hickory Web Designs </h2>
 
@@ -70,11 +71,15 @@
 		life in days. So, if you are looking for an affordable website that makes your customers feel at home, you have come to the
 		right place!
 	</p>
+	</div>
 <!--______________________________________________________________________________________________________________________________--!>
+	
+	<div class='section content'>
+
 	<h2> Web Designer </h2>
 
 	<p> 
-		<img src="img/FormalPhoto.jpg" id="portrait" alt="Jordon Meredith Photo">
+		<img src="img/FormalPhoto.jpg" class="portrait" alt="Jordon Meredith Photo">
 		Jordon Meredith is a Computer Science student at American Public University interested
 		in web development, web analytics, mobile application development, and database managment. 
 		In early 2016, Jordon found herself spending unnecessary hours pulling reports, compiling information, 
@@ -95,17 +100,33 @@
 	<br/> <br/> 
 		It is estimated that Jordon will finish her degree in July, 2018.</p>
 
-		
+
 		<p> View resume information <a href="Resume.html" target="_blank">Here</a>. </p>
 	<br/> 
 
 	<hr class="style-one">
 
-	<h3> View packages and services <a href="Packages.html">Here</a> </h3>
+	</div>
 	
-	<br/> <br/>
+	<br/> <br/> <br/> <br/>
+
+	
 
 </div>
 
 	</body>
 	</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+		
