--- a/index.html
+++ b/index.html
@@ -11,52 +11,54 @@
 		<meta name="keywords" content="Jordon Meredith, Jordon, Meredith, Hickory Web Designs, Web Designs, Office Training, Del Rio, Texas, Southern Texas, Laughlin AFB">
 		<meta name="description" content="Hickory Web Design Home Page">
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
 </head>
 <!--____________________________________________________________Navigation______________________________________________________________--!>
 
 <Body>
 
 <div class="navbar">
-	<a href="index.html">
-		<img src="img/FullLogo.png" alt="Hickory Web Designs Logo" id="mainLogo" />
-	</a>
+
+	<div class='section logo'>
+
+			<a href="index.html"> <img src="img/FullLogo.png" alt="Hickory Web Designs Logo" class="mainLogo" /> </a>
+
+	</div>
+
+
 
   	<div class="dropdown">
-    		<button class="dropbtn">&#9776; Menu
-     		 <i class="fa fa-caret-down"></i>
-    		</button>
+		<div class='section navMenu'>
+    		<button class="dropbtn"> &#9776; Menu </button>
+		</div>
    			 <div class="dropdown-content">
 					<a href="index.html"> Home</a>
 					<a href="Packages.html"> Packages </a>
 					<a href="Services.html"> Services </a>
 					<a href="About.html"> About </a>
-					<a href="ContactUs.html"> Contact Us </a>
-       			</div>
+					<a href="Contact.html"> Contact Us </a>
+					<a href="SvcInfo.html"> Q&A </a>
+    			</div>
 	
   	</div> 
 
 </div>
 
-<hr class="style-eight">
-
 <!--________________________________________________________BODY________________________________________________________________--!>
 	
-	<div class="col-3 col-m-1"> &nbsp; </div>
-	<div class="col-6 col-m-3 Heading">
+<div class='page'>	
+
+	
+	<div class='section header'>
 
  			<h1> Hickory Web Designs </h1> 
-
-		
 	</div>
-	
-	<div class="col-12"> &nbsp; </div>
-	<div class="col-2"> &nbsp; </div>
-	<div class="col-8 Body">
+
+	<div class='section content'>
 
 			<h2> Web Design and Optimization </h2>
 			<p>
-
+  
 				<img src="img/Texas.png" id="texas" alt="Image of Texas State">
 			Hickory Web Designs is a new company based in Del Rio, TX whose goal is to make small business easy. Using
 			Knowledge gained through university education, certifications and experience, Hickory Web Designs builds simple,
@@ -73,11 +75,15 @@
 			Additionally, Hickory Web Designs also provides services such as analytics tool integration and advertisement additions. This
 			means that, in addition to having a new website built, we can help optimize your site as well! 
 
-			</p>
+			</p>		
+
+	</div>
+
+	<div class='section content'>
 
 			<h2> Office Professionals </h2>
 
-			<p>
+			<p>		
 
 			Despite the name, Hickory Web Designs does not just specialize in web development. We can also help train you or your
 			staff on Microsoft Office productivity and presentation software, such as Word or Excel.
@@ -86,44 +92,38 @@
 
 	</div>
 
-	<div class="col-12"> &nbsp; </div>
-	<div class="col-2"> &nbsp; </div>
-	<div class="col-8 Body">
+	<div class='section header'>
+
 
 		<h1> Packages and Services </h1>
 
-			<hr class="style-one">
-
-
-		<div class="col-0"> &nbsp; </div>
-		<div class="col-3 Blu">
-
-			<a href="Packages.html">
-			<img src="img/PackagesLogo.png" class="ChoicePic" alt="View Packages"> </a>
-
-		</div>
-	
-		<div class="col-1"> &nbsp; </div>
-
-		<div class="col-3 Blu">
-
-			<a href="Services.html">
-			<img src="img/ServicesLogo.png" class="ChoicePic" alt="View Services"> </a>
-
-		</div>
-	
-		<div class="col-1"> &nbsp; </div>
-		
-		<div class="col-3 Blu">
-
-			<a href="Contact.html"> 
-			<img src="img/ContactLogo.png" class="ChoicePic" alt="Contact Us"> </a>
-
-		</div>
-
-		<div class="col-0"> &nbsp; </div>
 	</div>
 
+
+	 <div class='section feature-1'>
+
+			<a href="Packages.html">
+			<img src="img/PackagesLogo.png" class="SelectPic" alt="View Packages"> </a>
+
+  	</div>
+
+
+  	<div class='section feature-2'>
+	
+			<a href="Services.html">
+			<img src="img/ServicesLogo.png" class="SelectPic" alt="View Services"> </a>
+
+	</div>
+
+
+  	<div class='section feature-3'>
+
+
+			<a href="Contact.html"> 
+			<img src="img/ContactLogo.png" class="SelectPic" alt="Contact Us"> </a>
+	</div>
+
+</div>
 
 
 </body>
