--- a/Packages.html
+++ b/Packages.html
@@ -10,35 +10,38 @@
 		<meta name="keywords" content="Jordon Meredith, Jordon, Meredith, Hickory Web Designs, Web Designs, Office Training">
 		<meta name="description" content="Hickory Web Designs offered packages and specials">
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
 </head>
 <!--____________________________________________________________Navigation______________________________________________________________--!>
 
 <Body>
 
 <div class="navbar">
-	<a href="index.html">
-		<img src="img/FullLogo.png" alt="Hickory Web Designs Logo" id="mainLogo" />
-	</a>
-	<input type="text" placeholder="Search...">
+
+	<div class='section logo'>
+
+			<a href="index.html"> <img src="img/FullLogo.png" alt="Hickory Web Designs Logo" class="mainLogo" /> </a>
+
+	</div>
+
+
 
   	<div class="dropdown">
-    		<button class="dropbtn">&#9776; Menu
-     		 <i class="fa fa-caret-down"></i>
-    		</button>
+		<div class='section navMenu'>
+    		<button class="dropbtn"> &#9776; Menu </button>
+		</div>
    			 <div class="dropdown-content">
 					<a href="index.html"> Home</a>
 					<a href="Packages.html"> Packages </a>
 					<a href="Services.html"> Services </a>
 					<a href="About.html"> About </a>
-					<a href="ContactUs.html"> Contact Us </a>
+					<a href="Contact.html"> Contact Us </a>
+					<a href="SvcInfo.html"> Q&A </a>
     			</div>
 	
   	</div> 
 
 </div>
-
-<hr class="style-eight">
 
 <!--_________________________________________________Side Nav For Packages________________________________________________________________--!>
 
@@ -51,29 +54,26 @@
 			<a href="#Train"> Training Package </a>
 		</div>
 <!--____________________________________________________BODY_____________________________________________________________--!>
+
+<div class='page'>	
+
 	
-	<div class="col-3"> &nbsp; </div>
-	<div class="col-6 Heading">
+	<div class='section header'>	
+
  				<h1> Services Packages </h1>
 	</div>
 
+	<div class='section Scontent'>
 
 
-
-
-	<div class="col-0"> &nbsp; </div>
-
-	<div class="col-12"> &nbsp;
 		<h2 id="Plat"> Web Development Package Platinum </h2>
 		<h4> (Currently Unavailable) </h4>
-	</div>
+			
+	<div class='section package'>
 		
-	<div class="col-1"> &nbsp; </div>
-	<div class="col-7 Pack">
-		
-			The premium package is an all inclusive deal designed to get you the best price on all your needs.
+			<p> The premium package is an all inclusive deal designed to get you the best price on all your needs.
 			Websites are hand-coded, so you are not limited to generic layouts and designs. This package also
-			includes e-commerce functionality with adds a checkout cart function so customers can order online. 
+			includes e-commerce functionality with adds a checkout cart function so customers can order online. </p>
 			<ul>
 				<li> Web Design
 					<ul>
@@ -90,25 +90,23 @@
 				<li> 1 Year Web Hosting </li>
 			</ul>
 	
+		</div>
 	</div>
 
-
-	<div class="col-1"> &nbsp; </div>
-	<div class="col-12"> &nbsp; </div>
 <!--_____________________________________________________________________________________________________________________--!>
+	
+	<div class='section Scontent'>
 
 
-	<div class="col-12">
 		<h2 id="Gold"> Web Development Package Gold </h2>
 		<h4> (Currently Unavailable) </h4>
-	</div>	
-	<div class="col-1"> &nbsp; </div>
-	<div class="col-7 Pack">
+
+	<div class='section package'>
 		
-			The Gold Package is for those who need to distribute information efficiently over the web, but do not 
+			<p>The Gold Package is for those who need to distribute information efficiently over the web, but do not 
 			necessarily need to make online sales. This package is perfect for contractors, real-estate professionals,
 			freelancers and more. 
-			This package includes:
+			This package includes:</p>
 			<ul>
 				<li> Web Design
 					<ul>
@@ -125,19 +123,17 @@
 			</ul>
 		
 		</div>
+	</div>
 
-	<div class="col-1"> &nbsp; </div>
-	<div class="col-12"> &nbsp; </div>
 <!--_____________________________________________________________________________________________________________________--!>
-	<div class="col-12">
+
+	<div class='section Scontent'>
  		<h2 id="Silver"> Web Development Package Silver </h2> 
-	</div>	
+	
+	<div class='section package'>
 
-	<div class="col-1"> &nbsp; </div>
-	<div class="col-7 Pack">
-
-			This package is great for those who are looking to build a large, new, and custom website, but dont
-			need both analytics or advertisment. This package includes: 
+			<p>This package is great for those who are looking to build a large, new, and custom website, but dont
+			need both analytics or advertisment. This package includes: </p>
 			<ul>
 				<li> Web Design
 					<ul>
@@ -151,24 +147,22 @@
 				<li> 1 Year Web Hosting </li>	
 			</ul>
 		
-			
-			$299.99	
 		
-		</div>
-
-	<div class="col-1"> &nbsp; </div>
-	<div class="col-12"> &nbsp; </div>
-<!--_____________________________________________________________________________________________________________________--!>
-	<div class="col-12">
-		<h2 id="Bronze"> Web Development Package Bronze</h2> 
-	</div>	
-
-	<div class="col-1"> &nbsp; </div>
-	<div class="col-7 Pack">
 	
+		</div>
+	</div>
 
-			Clients that need a simple, basic website will benefit the most from this package.
-			Choose either web analytics or web advertisement: whichever works best for you! Includes:	
+<!--_____________________________________________________________________________________________________________________--!>
+
+	<div class='section Scontent'>
+
+		<h2 id="Bronze"> Web Development Package Bronze</h2> 
+
+	<div class='section package'>
+
+
+			<p>Clients that need a simple, basic website will benefit the most from this package.
+			Choose either web analytics or web advertisement: whichever works best for you! Includes: </p>
 			<ul>
 				<li> Web Design
 					<ul>
@@ -181,25 +175,20 @@
 			</ul>
 	
 			
-				$199.99
-		
 		
 		</div>
+	</div>		
 
-	<div class="col-1"> &nbsp; </div>
-	<div class="col-12"> &nbsp; </div>
 <!--_____________________________________________________________________________________________________________________--!>
-	
-	<div class="col-12">
+
+	<div class='section Scontent'>
+
 		<h2 id="Opt"> Web Optimization Package </h2>
 
-	</div>	
-
-	<div class="col-1"> &nbsp; </div>
-	<div class="col-7 Pack">	
+	<div class='section package'>
 		
-			This package works best for pre-existing websites, both custom built and built using hosting
-			websites. This package includes:
+			<p> This package works best for pre-existing websites, both custom built and built using hosting
+			websites. This package includes:</p>
 			<ul>
 				<li> Integration of Web Analytics* </li>
 				<li> Integration of Web Advertisement* </li>
@@ -207,31 +196,26 @@
 			</ul>	
 
 	
-	
-			$99.99
 
 		
+
 		</div>
+	</div>
 
-
-	<div class="col-1"> &nbsp; </div>
-	<div class="col-12"> &nbsp; </div>
 <!--_____________________________________________________________________________________________________________________--!>
+
+	<div class='section Scontent'>
 	
-	<div class="col-12">
 		<h2 id="Train"> Training Package </h2>
 	
-	</div>	
 
-	<div class="col-1"> &nbsp; </div>
-	<div class="col-7 Pack">
+	<div class='section package'>		
 		
-		
-			This training package is designed to give your office an edge. Pick two or more trainings below and save!
+			<p>This training package is designed to give your office an edge. Pick two or more trainings below and save!
 			Up to two training seminars can be held on the same day. Training seminars have restrictions for number of 
 			attendants. See our <a href="Services.html#Train2" target="_blank">Services</a> page for more information!
 			<br/>
-			Start with two (2):
+			<strong> Start with two (2):</strong></p>
 			<ul>
 				<li> Office Suite Basics </li>
 				<li> Office Suite Intermediate </li>
@@ -242,16 +226,15 @@
 	
 		
 	
-			$79.99 <p class="notation"> Additional Class: $19.99 </p>
 
 		</div>
+	</div>
 
-	<div class="col-1"> &nbsp; </div>
-	<div class="col-12"> &nbsp; </div>
+
 <!--_____________________________________________________________________________________________________________________--!>
 	<br/> <br/>
 
-	<div class="col-12">	
+	
 	<p class="small">
 		*Must have an account with a web analytics and/or web advertisement company. Although many tracking companies are free, any 
 		expenses to sign up for, use or maintain an analytics or advertising account is the responsibity of the company and not Hickory
@@ -260,8 +243,10 @@
 		<br/>
 		
 		**Monthly payments available	</p>
-	</div>
+	
 		
 	<br/> <br/>
+
+
 	</body>
 	</html>
